# BackEnd/src/router.js
@@ -11,9 +11,9 @@ const router = express.Router();
 router.use('/soroteca-docs',swaggerUi.serve,swaggerUi.setup(swaggerDocument)) ;
 
 router.get('/rules', getRules.getAllRules);
-router.get('/cadUsers', cadUser.getAll);
+router.get('/cadUsers/', cadUsersMiddleware.validaAutorization, cadUser.getAll);
 router.post('/cadUsers',cadUsersMiddleware.validateBody,cadUser.cadUsers);
-router.delete('/cadUsers/:id',cadUser.deleteUser);
-router.put('/cadUsers/:id',cadUsersMiddleware.validateBody,cadUser.updateUser);
+router.delete('/cadUsers/:id',cadUsersMiddleware.validateExists,cadUser.deleteUser);
+router.put('/cadUsers/:id',cadUsersMiddleware.validateBody,cadUsersMiddleware.validateExists,cadUser.updateUser);
 
 module.exports = router;
